--- a/src/app/pages/offres/offres.component.scss
+++ b/src/app/pages/offres/offres.component.scss
@@ -127,3 +127,21 @@
     }
   }
 }
+
+.btnsearch{
+  margin-left: 500px;
+  height: 100px;
+  width: 400px;
+  font-size: xx-large;
+
+}
+
+.iconsearch{
+  margin-left: 500px;
+  font-size: large;
+}
+
+.boxes{
+  float: right;
+}
+
