--- a/src/app/pages/societe-cards/societe-cards.component.html
+++ b/src/app/pages/societe-cards/societe-cards.component.html
@@ -3,10 +3,10 @@
 <p-card header="{{i.nom_entreprise}}" subheader="{{i.site_web}}"  [style]="{width: '300px'}" styleClass="p-card-shadow p" *ngFor="let i of employeurs">
   <ng-template pTemplate="header">
     <!--<img alt="Card" src="https://m.media-amazon.com/images/I/51nX7PBmzIL._SS500_.jpg" width="150px">-->
-    <img alt="Card" src="{{i.logo}}" width="150px">
+    <img alt="Card" src="{{i.logo}}" width="150px" height="100px">
 
   </ng-template>
-  <p>{{i.description_entreprise}}</p>
+  <p>{{i.description_entreprise | slice:0:200}} ... </p>
   <ng-template pTemplate="footer"  >
     <p-dialog header="Les Offres" [(visible)]="display"  [maximizable]="true" >
 
