--- a/src/app/pages/blog-home/blog-home.component.html
+++ b/src/app/pages/blog-home/blog-home.component.html
@@ -1,14 +1,15 @@
 <section class="articles" >
 
-  <div class="article" *ngFor="let i of blog" >
+  <div class="article" *ngFor="let blog of blogs" >
     <div class="left">
-      <img src="{{i.logo}}" alt="">
+      <img src="{{blog.logo}}" alt="">
     </div>
     <div class="right">
-      <p class="date"> posted at : {{i.created_at | date: 'dd/MM/yyyy'}}</p>
-      <h1>{{i.titre}}</h1>
-      <p class="description">{{i.description | slice:0:10}} <br> <span class="suite">voir la suite</span></p>
+      <p class="date"> posted at : {{blog.created_at | date: 'dd/MM/yyyy'}}</p>
+      <h1>{{blog.titre}}</h1>
+      <p class="description" style="white-space: pre-wrap" >{{blog.description | slice:0:280}}... <br> <span class="suite">voir la suite</span></p>
       <!--<p class="auteur">Julie Lablonde</p>-->
     </div>
   </div>
+
 </section>
