--- a/src/app/pages/gestion-cv/gestion-cv.component.html
+++ b/src/app/pages/gestion-cv/gestion-cv.component.html
@@ -1,5 +1,13 @@
 <div class="card">
-    <p-toast></p-toast>
-    <p-steps [model]="items" [readonly]="true"></p-steps>
+
+<div class="c">
+    <div >
+        <p-toast></p-toast>
+        <p-steps [model]="items" [(activeIndex)]="activeIndex" [readonly]="true"></p-steps>
+      </div>
+    
+      <div class="box2">
+        <router-outlet></router-outlet>
+      </div>
 </div>
-<router-outlet></router-outlet>
+</div>
