--- a/src/app/pages/offres/offre/offre.component.html
+++ b/src/app/pages/offres/offre/offre.component.html
@@ -10,8 +10,8 @@
 <p-fieldset legend="Details :" [toggleable]="true" [transitionOptions]="'10ms'">
   <p-splitter [style]="{'height': '300px'}">
     <ng-template pTemplate>
-      <span style="text-transform: uppercase ; font-style: oblique ; font-family: 'Noto Sans JP', sans-serif ; font-weight: bold;text-decoration: underline">  Détails de l'annonce :<br>
-      </span> <br>
+      <div style="text-transform: uppercase ; font-style: oblique ; font-family: 'Noto Sans JP', sans-serif ; font-weight: bold;text-decoration: underline">  Détails de l'annonce :<br>
+      </div> <br>
       <ul>
         <li>    <p> <span style="font-weight: bolder; list-style-type: none"> niveau d'éducation : </span>{{offre.niveau_education}}  </p></li>
         <li>      <p> <span style="font-weight: bolder; list-style-type: none"> experience : </span>{{offre.experience}}  </p></li>
@@ -19,8 +19,8 @@
       </ul>
     </ng-template>
     <ng-template pTemplate>
-      <span style="text-transform: uppercase ; font-style: oblique ; font-family: 'Noto Sans JP', sans-serif ; font-weight: bold;text-decoration: underline">  Description de l'annonce : </span>
-      <span > Enreprise: {{offre.description_emplo}} </span>
+      <div style="text-transform: uppercase ; font-style: oblique ; font-family: 'Noto Sans JP', sans-serif ; font-weight: bold;text-decoration: underline">  Description de l'annonce : </div>
+      <div style="white-space: pre-wrap" > {{offre.description_emploi}} </div>
     </ng-template>
   </p-splitter>
 </p-fieldset>
