--- a/src/app/admin/tests/tests.component.html
+++ b/src/app/admin/tests/tests.component.html
@@ -38,7 +38,8 @@
               <div>
 
                 <!-- Form for modifying a question -->
-                <p-dialog header="Modifier question" [modal]="true" [draggable]="false"  [(visible)]="questionModifDisplay">
+                <p-dialog header="Modifier question" [modal]="true" [draggable]="false"
+                  [(visible)]="questionModifDisplay">
                   <div style="width:50vw;">
                     <input type="text" pInputText value="{{modif_question.question}}"
                       [(ngModel)]="modif_question.question" placeholder="question" />
@@ -82,9 +83,10 @@
 
                   <!-- <p-checkbox name="groupname" value="selected_reponse.correct" [(ngModel)]="selected_reponse.correct"></p-checkbox> -->
 
-                  <input type="text" class="reponse" pInputText
-                    [ngClass]="selected_reponse.correct ? 'success' : 'danger'" [(ngModel)]="selected_reponse.reponse"
-                    value="{{selected_reponse.reponse}}" />
+                  <textarea class="reponse" pInputTextarea
+                  [ngClass]="selected_reponse.correct ? 'success' : 'danger'" [(ngModel)]="selected_reponse.reponse"
+                  value="{{selected_reponse.reponse}}"></textarea>
+
                   <button pButton pRipple type="button" icon="pi pi-check" (click)="modifierReponse(reponse)"
                     pTooltip="confirmer" class="p-button-rounded p-button-text"></button>
                   <button pButton pRipple type="button" (click)="cancelReponse()" icon="pi pi-times" pTooltip="cancel"
@@ -114,24 +116,23 @@
 
 
 
-<div >
-  <p-card >
+<div>
+  <p-card>
 
     <ng-template pTemplate="footer">
       <p-dialog header="Ajout test" [modal]="true" [draggable]="false" [modal]="true" [(visible)]="display2">
         <div style="width:40w;">
           <form>
-      
-            <input id="test" type="text" pInputText [(ngModel)]="test.domaine" name="test" placeholder="test sujet"
-              >
+
+            <input id="test" type="text" pInputText [(ngModel)]="test.domaine" name="test" placeholder="test sujet">
             <button pButton pRipple type="button" (click)="ajouterTest()" icon="pi pi-plus" pTooltip="ajouter"
               class="p-button-rounded p-button-text"></button>
           </form>
         </div>
       </p-dialog>
-    
+
       <button pButton pRipple type="button" (click)="testAddDialog()" label="Ajout Test" icon="pi pi-plus"
-      class="p-button-raised p-button-text "></button>
+        class="p-button-raised p-button-text "></button>
 
     </ng-template>
 
