--- a/src/app/pages/home-web/home-web.component.html
+++ b/src/app/pages/home-web/home-web.component.html
@@ -36,9 +36,9 @@
 
     <div class="title" #title>kamjobs</div>
 
-    <div (click)="route()" class="more">
-      <a>Show all the offres</a>
-    </div>
+    <!--<div (click)="route()" class="more">-->
+      <!--<a>Show all the offres</a>-->
+    <!--</div>-->
 
     <div class="desc">
       <p>
@@ -86,7 +86,9 @@
     <!--</li>-->
   </ul>
 </div>
-
+<div (click)="route()" class="more">
+  <a>Show all the offres</a>
+</div>
 
 <img class="img2" src="../../../assets/leaf4.png" data-depth=".1">
 
